# Mycrafts

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/AsyncLog/: AsyncLog.cpp  AsyncLog.hpp  CMakeLists.txt
src/GL/: CMakeLists.txt  GL.cpp  GL.hpp
src/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.hpp
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/glad/: CMakeLists.txt  glad.c  glad.h
